--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,6 +48,8 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.2.1'
 //    compile 'com.github.revs87:TheTripasLibrary:1.0.0-beta.007'
-    compile 'com.google.android.gms:play-services-maps:9.2.1'
-    compile 'com.google.android.gms:play-services-location:9.2.1'
+//    compile 'com.google.android.gms:play-services-maps:9.2.1'
+//    compile 'com.google.android.gms:play-services-location:9.2.1'
+
+    compile project(path: ':clientcore')
 }
