--- a/clientcore/build.gradle
+++ b/clientcore/build.gradle
@@ -21,5 +21,9 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
+
+    compile project(path: ':core')
     compile 'com.android.support:appcompat-v7:24.1.1'
+    compile 'com.google.android.gms:play-services-maps:9.2.1'
+    compile 'com.google.android.gms:play-services-location:9.2.1'
 }
