--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,10 +24,11 @@ android {
         versionCode 1
         versionName "1.0"
         signingConfig signingConfigs.config
+        multiDexEnabled true
     }
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
@@ -46,10 +47,15 @@ android {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
+    compile project(path: ':clientcore')
     compile 'com.android.support:appcompat-v7:23.2.1'
+    compile 'com.android.support:multidex:1.0.1'
+//    compile files('libs/com.nianticlabs.pokemongo_0.29.0.jar')
 //    compile 'com.github.revs87:TheTripasLibrary:1.0.0-beta.007'
 //    compile 'com.google.android.gms:play-services-maps:9.2.1'
 //    compile 'com.google.android.gms:play-services-location:9.2.1'
 
-    compile project(path: ':clientcore')
+
 }
+
+
