--- a/clientcore/build.gradle
+++ b/clientcore/build.gradle
@@ -1,14 +1,22 @@
 apply plugin: 'com.android.library'
 
 android {
+    signingConfigs {
+        config {
+            keyAlias 'release'
+            keyPassword 'Tripas!!!'
+            storeFile file('C:/WorkFS/_myHub/key/release.keystore')
+            storePassword 'Tripas!!!'
+        }
+    }
     compileSdkVersion 24
     buildToolsVersion "24.0.1"
-
     defaultConfig {
         minSdkVersion 17
         targetSdkVersion 24
         versionCode 1
         versionName "1.0"
+        multiDexEnabled true
     }
     buildTypes {
         release {
@@ -19,11 +27,11 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
-
     compile project(path: ':core')
     compile 'com.android.support:appcompat-v7:24.1.1'
+    compile 'com.android.support:multidex:1.0.1'
     compile 'com.google.android.gms:play-services-maps:9.2.1'
     compile 'com.google.android.gms:play-services-location:9.2.1'
 }
