--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,10 @@ dependencies {
     compile project(path: ':clientcore')
     compile 'com.android.support:appcompat-v7:23.2.1'
     compile 'com.android.support:multidex:1.0.1'
+
+    compile 'com.google.guava:guava:19.0'
+
+
 //    compile files('libs/com.nianticlabs.pokemongo_0.29.0.jar')
 //    compile 'com.github.revs87:TheTripasLibrary:1.0.0-beta.007'
 //    compile 'com.google.android.gms:play-services-maps:9.2.1'
